--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,5 +1,5 @@
 .navbar {
-  background-color: #1f5156;
+  background-color: #0e0f0e; /* remember!!*/
   height: 80px;
   display: flex;
   justify-content: center;
@@ -20,7 +20,7 @@
 }
 
 .nav-logo {
-  color: #f5b921;
+  color: #b80e1f;
   align-items: center;
   margin-left: 20px;
   cursor: pointer;
@@ -68,7 +68,6 @@
 
 .nav-item .active {
   color: #ffdd40;
-  border: 1px solid #ffdd40;
 }
 
 .nav-icon {
